| Issue | Fix Version | Assignee | Priority | Status | Resolution | Resolved In Build |
|---|---|---|---|---|---|---|
| JDK-2187037 | 7 | Daniel Daugherty | P4 | Closed | Fixed | b79 |
| JDK-2190004 | 6u21 | Daniel Daugherty | P4 | Resolved | Fixed | b01 |
| JDK-2186632 | 6u19 | Daniel Daugherty | P4 | Resolved | Fixed | b01 |
| JDK-2186284 | OpenJDK6 | Daniel Daugherty | P4 | Resolved | Fixed | b18 |
| JDK-2186277 | hs17 | Daniel Daugherty | P4 | Closed | Fixed | b06 |
| JDK-2186633 | hs16.2 | Daniel Daugherty | P4 | Resolved | Fixed | b01 |
| JDK-2188956 | hs16 | Daniel Daugherty | P4 | Closed | Won't Fix |
analysis report:
New nsk.jvmti failures (from 2007.10.06)
nsk/jvmti/AttachOnDemand/attach034
This test failed the following assertion:
Internal Error (src/share/vm/prims/jvmtiEnv.cpp:457)
Error: assert(phase == JVMTI_PHASE_LIVE,"sanity check")
on Solaris SPARC Client VM (machine jtgb4u2e). See similar
failure for attach043 below.
The above failure was with a Dolphin-B21 JDK with a newer
VM, i.e., Dolphin-B22ish VM.
New nsk.jvmti failures (from 2007.08.21)
nsk/jvmti/AttachOnDemand/attach043
This test failed the following assertion:
Internal Error (src/share/vm/prims/jvmtiEnv.cpp:457)
Error: assert(phase == JVMTI_PHASE_LIVE,"sanity check")
on Linux AMD64 Server VM (machine bunt).
Update: Alan believes we have a product bug here since
AddToSystemClassLoaderSearch() should be returning a phase
error rather than asserting. He also believes we may have a
timing bug in the test.
The above failure was with a Dolphin-B18 JDK with a newer
VM, i.e., Dolphin-B19ish VM.
- backported by
-
JDK-2186284 src/share/vm/prims/jvmtiEnv.cpp:457 assert(phase == JVMTI_PHASE_LIVE,"sanity check")
-
- Resolved
-
-
JDK-2186632 src/share/vm/prims/jvmtiEnv.cpp:457 assert(phase == JVMTI_PHASE_LIVE,"sanity check")
-
- Resolved
-
-
JDK-2186633 src/share/vm/prims/jvmtiEnv.cpp:457 assert(phase == JVMTI_PHASE_LIVE,"sanity check")
-
- Resolved
-
-
JDK-2190004 src/share/vm/prims/jvmtiEnv.cpp:457 assert(phase == JVMTI_PHASE_LIVE,"sanity check")
-
- Resolved
-
-
JDK-2186277 src/share/vm/prims/jvmtiEnv.cpp:457 assert(phase == JVMTI_PHASE_LIVE,"sanity check")
-
- Closed
-
-
JDK-2187037 src/share/vm/prims/jvmtiEnv.cpp:457 assert(phase == JVMTI_PHASE_LIVE,"sanity check")
-
- Closed
-
-
JDK-2188956 src/share/vm/prims/jvmtiEnv.cpp:457 assert(phase == JVMTI_PHASE_LIVE,"sanity check")
-
- Closed
-