6648438: 4/4 src/share/vm/prims/jvmtiEnv.cpp:457 assert(phase == JVMTI_PHASE_LIVE,"sanity check")

Return error on invalid JVMTI_PHASE instead of asserting.

Reviewed-by: dholmes, ohair